fixed arrow overflow on carousel

--- a/input.css
+++ b/input.css
@@ -294,49 +294,43 @@ li.glide__slide{
 }
 
 /* Slider controls - GlideJs */
+
 .glide__arrows button {
     position: absolute;
-    z-index: 99;
     color: white;
-    transform: translateY(-540%);
+    transform: translateY(50%);
     padding: 3px 10px;
-    /* bottom: -/100px; */
+    bottom: 50%;
     cursor: pointer;
 }
 
-.fa-solid{
-    color: black;
+.glide__arrow--left{
+    left: 0px;
 }
 
-/* .control li:hover {
-    background: #000;
-} */
-
-.glide__arrow--left {
-    left: 20px;
+.glide__arrow--right{
+    right: 0px;
 }
 
-.glide__arrow--right {
-    right: 10px;
-}
-
-@media only screen and (max-width: 720px){
-    .glide__arrow--left {
-        left: 10px;
+@media only screen and (min-width: 720px) {
+    .glide__arrow--left{
+        /* background-color: red; */
+        left: -5%;
     }
 
-    .glide__arrow--right {
-        right: 0px;
+    .glide__arrow--right{
+        right: -5%;
     }
 }
 
-@media only screen and (max-width: 960px){
-    .glide__arrow--left {
-        left: -30px;
+@media only screen and (min-width: 960px) {
+    .glide__arrow--left{
+        /* background-color: red; */
+        left: 0%;
     }
 
-    .glide__arrow--right {
-        right: -40px;
+    .glide__arrow--right{
+        right: 0%;
     }
 }
 
@@ -369,10 +363,62 @@ li.glide__slide{
 
 /* Panorama */
 
+@media only screen and (max-width: 540px){
+   .panorama-text-1{
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    transform: translate(-50%, -25%);
+    }
+
+    .panorama-text-2{
+        position: absolute;
+        top: 40%;
+        left: 60%;
+        width: 100%;
+        text-align: center;
+        transform: translate(-60%, -50%);
+    }
+
+    .panorama-text-3{
+        position: absolute;
+        bottom: 40%;
+        width: 100%;
+        text-align: center;
+    }
+}
+
+@media only screen and (max-width: 960px){
+    .panorama-text-1{
+     position: absolute;
+     top: 25%;
+     left: 50%;
+     transform: translate(-50%, -25%);
+     }
+ 
+    .panorama-text-2{
+        position: absolute;
+        top: 45%;
+        left: 60%;
+        width: 100%;
+        text-align: center;
+        transform: translate(-60%, -50%);
+    }
+ 
+    .panorama-text-3{
+        position: absolute;
+        bottom: 40%;
+        width: 100%;
+        text-align: center;
+    }
+ }
+
 .panorama-text-1{
     position: absolute;
     top: 25%;
     left: 50%;
+    width: 100%;
+    text-align: center;
     transform: translate(-50%, -25%);
 }
 
@@ -380,6 +426,8 @@ li.glide__slide{
     position: absolute;
     top: 40%;
     left: 50%;
+    width: 100%;
+    text-align: center;
     transform: translate(-50%, -40%);
 }
 
@@ -387,5 +435,7 @@ li.glide__slide{
     position: absolute;
     top: 70%;
     left: 50%;
+    width: 100%;
+    text-align: center;
     transform: translate(-50%, -70%);
 }
